--- a/sections/flavoures-card.liquid
+++ b/sections/flavoures-card.liquid
@@ -97,7 +97,7 @@
 
 {% schema %}
   {
-    "name": "Flavours Product",
+    "name": "Featured collection",
     "class": "shopify-section--featured-collection",
     "tag": "section",
     "disabled_on": {
