--- a/assets/theme.css
+++ b/assets/theme.css
@@ -10597,7 +10597,19 @@ h3#predictive-search-products {
 /* font-family */
 
 h1,
-h0 {
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+span,
+body,
+ul,
+li,
+small,
+div {
   font-family: Proxima_Nova !important;
 }
 
