--- a/assets/theme.css
+++ b/assets/theme.css
@@ -10613,4 +10613,13 @@ div {
   font-family: Proxima_Nova !important;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: bold;
+}
+
 /* font-family */
