--- a/assets/theme.css
+++ b/assets/theme.css
@@ -10581,6 +10581,10 @@ h3#predictive-search-products {
   src: url("https://cdn.shopify.com/s/files/1/0024/6759/4339/files/Proxima_Nova_Bold.woff") format("woff");
 }
 
+@font-face {
+  font-family: "Proxima_Nova_Excn_semibold";
+  src: url("https://cdn.shopify.com/s/files/1/0024/6759/4339/files/Proxima_Nova_Excn_semibold.woff") format("woff");
+}
 
 .product-card__info .product-card__title .bold {
   font-size: 24px;
