--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -333,9 +333,9 @@ Supported variables
             class="button button--xl"
             is="custom-button">
             <div class="customatcbtn">
-              <div style="transform: translateY(0px); opacity: 1;">Add to cart
+              <div class="button-title" style="transform: translateY(0px); opacity: 1;">Add to cart
               </div>
-              <div>{{ product.price | money }}</div>
+              <div class="card-price">{{ product.price | money }}</div>
             </div>
             <span class="button__loader" style="transform: translateY(-10px); opacity: 0;">
               <span style="opacity: 1;"></span>
