--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -35,6 +35,14 @@ CSS
       --slideshow-slide-controls-color: {{ controls_color.rgb }};
     }
   {%- endfor -%}
+
+  p.h0 {
+  padding-top: 16px;
+  background: black;
+  border-radius: 27px;
+  padding-inline: 10px;
+  padding-bottom: 10px;
+  }
 </style>
 
 {%- comment -%}
