--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -38,7 +38,7 @@ CSS
 
   p.h0 {
   padding-top: 16px;
-  background: black;
+  background: {{block: .settings .title_background;}};
   border-radius: 27px;
   padding-inline: 10px;
   padding-bottom: 10px;
@@ -284,6 +284,12 @@ LIQUID
       "type": "header",
       "content": "Background",
       "info": "When \"Full width\" is enabled, the background is shown while image is loading. You can override the background for each slide."
+    },
+    {
+      "type": "color",
+      "id": "title_background",
+      "label": "Title Background",
+      "default": "#F2F2F2"
     },
     {
       "type": "color",
