--- a/snippets/navigation-panel.liquid
+++ b/snippets/navigation-panel.liquid
@@ -21,7 +21,10 @@ Supported variables
     <div class="11 panel__wrapper" {% if mega_menu_block.settings.promo_content_layout == 'grid' or mega_menu_block.settings.promo_content_layout == 'collage' %}style="--panel-wrapper-justify-content: flex-start"{% endif %}>
       <div class="panel__scroller v-stack gap-8">
         {%- if is_mega_menu -%}
-          <button is="close-button" aria-label="{{ 'general.accessibility.close' | t | escape }}" {%- if section.settings.opening_from == 'bottom' -%}class="sm-max:hidden"{%- endif -%}>
+          <button
+            is="close-button"
+            aria-label="{{ 'general.accessibility.close' | t | escape }}"
+            {%- if section.settings.opening_from == 'bottom' -%}class="sm-max:hidden"{%- endif -%}>
             {%- render 'icon' with 'close', width: 19, height: 19 -%}
           </button>
         {%- endif -%}
@@ -60,13 +63,18 @@ Supported variables
 
             <li class="h3 sm:h4">
               {%- if link.links.size > 0 or mega_menu_block != '' and is_mega_menu == false -%}
-                <button class="text-with-icon w-full group justify-between" aria-expanded="false" data-panel="1-{% increment level_1 %}">
-                  <span>{{ link.title }}</span>
+                <button
+                  class="text-with-icon w-full group justify-between"
+                  aria-expanded="false"
+                  data-panel="1-{% increment level_1 %}">
+                  <span class="drawer-title">{{ link.title }}</span>
                   <span class="circle-chevron group-hover:colors group-expanded:colors">{%- render 'icon' with 'chevron-right-small', direction_aware: true -%}</span>
                 </button>
               {%- else -%}
                 <a href="{{ link.url }}" class="group block w-full">
-                  <span><span class="reversed-link">{{ link.title }}</span></span>
+                  <span>
+                    <span class="reversed-link">{{ link.title }}</span>
+                  </span>
                 </a>
               {%- endif -%}
             </li>
@@ -75,7 +83,10 @@ Supported variables
               {%- capture link_level_2 -%}
                 {{- link_level_2 -}}
 
-                <div class="22 panel__wrapper" {% if mega_menu_block.settings.promo_content_layout == 'grid' or mega_menu_block.settings.promo_content_layout == 'collage' %}style="--panel-wrapper-justify-content: flex-start"{% endif %} hidden>
+                <div
+                  class="22 panel__wrapper"
+                  {% if mega_menu_block.settings.promo_content_layout == 'grid' or mega_menu_block.settings.promo_content_layout == 'collage' %}style="--panel-wrapper-justify-content: flex-start"{% endif %}
+                  hidden>
                   <ul class="v-stack {% if is_mega_menu and is_image_shown == 'show' %}gap-3{% else %}gap-4{% endif %}">
                     <li class="{% if layout != 'drawer' %}lg:hidden{% endif %}">
                       <button class="text-with-icon h6 text-subdued" data-panel="0">
@@ -87,7 +98,10 @@ Supported variables
                       {%- for sub_link in link.links -%}
                         <li class="h3 {% if is_mega_menu %}sm:h5{% else %}sm:h4{% endif %}">
                           {%- if sub_link.links.size > 0 -%}
-                            <button class="text-with-icon w-full justify-between" aria-expanded="false" data-panel="2-{% increment level_2 %}">
+                            <button
+                              class="text-with-icon w-full justify-between"
+                              aria-expanded="false"
+                              data-panel="2-{% increment level_2 %}">
                               <span>{{ sub_link.title }}</span>
                               <span class="circle-chevron group-hover:colors group-expanded:colors">{%- render 'icon' with 'chevron-right-small', direction_aware: true -%}</span>
                             </button>
@@ -98,16 +112,16 @@ Supported variables
 
                                 {%- case sub_link.type -%}
                                   {%- when 'collection_link' -%}
-                                    {%- assign sub_link_image = sub_link.object.products.first.featured_media -%}
+                                  {%- assign sub_link_image = sub_link.object.products.first.featured_media -%}
 
                                   {%- when 'product_link' -%}
-                                    {%- assign sub_link_image = sub_link.object.featured_media -%}
+                                  {%- assign sub_link_image = sub_link.object.featured_media -%}
 
                                   {%- when 'blog_link' -%}
-                                    {%- assign sub_link_image = sub_link.object.articles.first.image -%}
+                                  {%- assign sub_link_image = sub_link.object.articles.first.image -%}
 
                                   {%- when 'article_link' -%}
-                                    {%- assign sub_link_image = sub_link.object.image -%}
+                                  {%- assign sub_link_image = sub_link.object.image -%}
                                 {%- endcase -%}
 
                                 {%- if sub_link_image != '' -%}
@@ -115,11 +129,17 @@ Supported variables
                                 {%- endif -%}
                               {%- endif -%}
                               {% if sub_link.object.image.src %}
-                              <img class="marginimg" width="50px" src="{{ sub_link.object.image.src | collection_img_url: 'small' }}" alt="{{ sub_link.object.title | escape }}" />
+                                <img
+                                  class="marginimg"
+                                  width="50px"
+                                  src="{{ sub_link.object.image.src | collection_img_url: 'small' }}"
+                                  alt="{{ sub_link.object.title | escape }}" />
                               {% endif %}
-                              
-                              <span><span class="reversed-link 222">{{ sub_link.title }}</span>
-                            <p>{{ sub_link.object.description | truncate: 110  }}</p></span>
+
+                              <span>
+                                <span class="reversed-link 222">{{ sub_link.title }}</span>
+                                <p>{{ sub_link.object.description | truncate: 110 }}</p>
+                              </span>
                             </a>
                           {%- endif -%}
                         </li>
@@ -138,23 +158,22 @@ Supported variables
 
                                 {%- for sub_sub_link in sub_link.links -%}
                                   <li class="{% if mobile_opening == 'left' %}h3{% else %}h5{% endif %} sm:h5">
-                                    <a class="group {% if is_image_shown %}h-stack gap-4{% else %}block w-full{% endif %}"
-                                       href="{{ sub_sub_link.url }}">
+                                    <a class="group {% if is_image_shown %}h-stack gap-4{% else %}block w-full{% endif %}" href="{{ sub_sub_link.url }}">
                                       {%- if is_image_shown and sub_sub_link.object != blank -%}
                                         {%- assign sub_sub_link_image = '' -%}
 
                                         {%- case sub_sub_link.type -%}
                                           {%- when 'collection_link' -%}
-                                            {%- assign sub_sub_link_image = sub_sub_link.object.products.first.featured_media -%}
+                                          {%- assign sub_sub_link_image = sub_sub_link.object.products.first.featured_media -%}
 
                                           {%- when 'product_link' -%}
-                                            {%- assign sub_sub_link_image = sub_sub_link.object.featured_media -%}
+                                          {%- assign sub_sub_link_image = sub_sub_link.object.featured_media -%}
 
                                           {%- when 'blog_link' -%}
-                                            {%- assign sub_sub_link_image = sub_sub_link.object.articles.first.image -%}
+                                          {%- assign sub_sub_link_image = sub_sub_link.object.articles.first.image -%}
 
                                           {%- when 'article_link' -%}
-                                            {%- assign sub_sub_link_image = sub_sub_link.object.image -%}
+                                          {%- assign sub_sub_link_image = sub_sub_link.object.image -%}
                                         {%- endcase -%}
 
                                         {%- if sub_sub_link_image != blank -%}
@@ -162,7 +181,9 @@ Supported variables
                                         {%- endif -%}
                                       {%- endif -%}
 
-                                      <span><span class="reversed-link">{{ sub_sub_link.title }}</span></span>
+                                      <span>
+                                        <span class="reversed-link">{{ sub_sub_link.title }}</span>
+                                      </span>
                                     </a>
                                   </li>
                                 {%- endfor -%}
@@ -189,7 +210,11 @@ Supported variables
           <ul class="v-stack gap-3">
             {%- for link in secondary_menu.links -%}
               <li>
-                <a href="{{ link.url }}" class="h6 group"><span><span class="reversed-link">{{ link.title }}</span></span></a>
+                <a href="{{ link.url }}" class="h6 group">
+                  <span>
+                    <span class="reversed-link">{{ link.title }}</span>
+                  </span>
+                </a>
               </li>
             {%- endfor -%}
           </ul>
@@ -198,7 +223,7 @@ Supported variables
 
       {%- if is_mega_menu -%}
         {%- render 'navigation-promo-block', navigation_layout: layout, mega_menu_block: mega_menu_block, is_navigation_drawer: true, link_col: link.links.size -%}
-      {%- else -%}
+        {%- else -%}
         {%- comment -%}
         ----------------------------------------------------------------------------------------------------------------
         SOCIAL MEDIA + LOCALIZATION
@@ -206,7 +231,8 @@ Supported variables
         {%- endcomment -%}
 
         {%- if section.settings.show_social_media -%}
-          {%- capture social_media -%}{%- render 'social-media' -%}{%- endcapture -%}
+          {%- capture social_media -%}
+            {%- render 'social-media' -%}{%- endcapture -%}
         {%- endif -%}
 
         {%- if show_country_selector and localization.available_countries.size > 1 -%}
