--- a/assets/theme.css
+++ b/assets/theme.css
@@ -10631,7 +10631,8 @@ h5,
 h6,
 .h0,
 .button-title,
-.card-price {
+.card-price,
+span.drawer-title {
   font-family: Proxima-Nova-Bold-2 !important;
 }
 
