--- a/snippets/button.liquid
+++ b/snippets/button.liquid
@@ -96,7 +96,7 @@ Supported variables
       {{- content -}}
     </div>
   {%- else -%}
-    <div class="bbbbbb">
+    <div class="button-text">
       {{- content -}}
     </div>
 
