--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -342,7 +342,18 @@ the underlying logic of the menu.
               {%- render 'icon' with 'account' -%}
             </a>
           {%- endif -%}
-          //////
+
+          
+          <li class="flavors-link">
+                  <a rel="nofollow" class="showflavor" href="{{ section.settings.flavorurl }}" role="link" title="Flavors">
+                     {% if  section.settings.flavorurl != blank %}
+                        {% render 'flavors' %}
+                    {% endif %}
+                      {{ section.settings.flavortext }}        
+                  </a>
+              </li>
+
+
           <a href="{{ routes.cart_url }}" data-no-instant class="relative tap-area" {% if settings.cart_type != 'page' and request.page_type != 'cart' %}aria-controls="cart-drawer"{% endif %}>
             <span class="sr-only">{{ 'header.general.open_cart' | t }}</span>
             {%- render 'icon' with 'cart' -%}
