--- a/assets/theme.css
+++ b/assets/theme.css
@@ -10254,6 +10254,7 @@ form {
 li.flavors-link {
   display: flex;
   align-items: center;
+  flex-direction: column;
 }
 
 .flavors-link svg {
@@ -10658,11 +10659,13 @@ img.rounded.multicolumn:hover {
 img.rounded.multicolumn:hover img.rounded2.multicolumn2 {
   display: block;
 }
-.product_image_size > img{
-       height: 186px;  
+
+.product_image_size>img {
+  height: 186px;
 }
+
 @media screen and (max-width: 999px) {
   .product_image_size>img {
     height: 80px;
-}
+  }
 }
