--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -349,7 +349,7 @@ the underlying logic of the menu.
                      {% if  section.settings.flavorurl != blank %}
                         {% render 'flavors' %}
                     {% endif %}
-                    <a>
+                    <a class="flavour-title">
                       {{ section.settings.flavortext }}   
                       </a>     
                   </a>
