--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -356,6 +356,7 @@ Supported variables
     </div>
     <div class="metafieldflexcard">
       <div class="textmetafield">
+        <img src="{{ product.metafields.custom.product_card_icon_text_1 | img_url }}" alt="">
         <div class="iconmargin">{{ product.metafields.custom.productcardicon1 }}</div>
         <div class="metafieldtext">{{ product.metafields.custom.productcardtext1 }}</div>
       </div>
