--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -356,8 +356,10 @@ Supported variables
     </div>
     <div class="metafieldflexcard">
       <div class="textmetafield">
-        <img src="{{ product.metafields.custom.product_card_icon_text_1 | img_url }}" alt="">
-        <div class="iconmargin">{{ product.metafields.custom.productcardicon1 }}</div>
+        <img
+          src="{{ product.metafields.custom.product_card_icon_text_1 | img_url }}"
+          alt=""
+          class="icon-pdp-card">
         <div class="metafieldtext">{{ product.metafields.custom.productcardtext1 }}</div>
       </div>
       <div class="textmetafield">
