--- a/assets/theme.css
+++ b/assets/theme.css
@@ -10082,6 +10082,7 @@ split-lines {
 .metafieldtext {
   padding-top: 3px;
   font-size: 13px;
+  font-family: 'Proxima-Nova-Bold-2' !important;
 
 }
 
