--- a/assets/theme.css
+++ b/assets/theme.css
@@ -10504,6 +10504,10 @@ h3#predictive-search-products {
     width: 100%;
     justify-content: left;
 
+    .qtydiv {
+      padding-top: 0px;
+    }
+
   }
 
   img.icon-pdp-card {
