--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -366,10 +366,12 @@ Supported variables
         <div class="metafieldtext">{{ product.metafields.custom.productcardtext1 }}</div>
       </div>
       <div class="textmetafield">
-        <img
-          src="{{ product.metafields.custom.product_card_icon_2 | img_url }}"
-          alt=""
-          class="icon-pdp-card">
+        {% if product.metafields.custom.product_card_icon_2 != blank %}
+          <img
+            src="{{ product.metafields.custom.product_card_icon_2 | img_url }}"
+            alt=""
+            class="icon-pdp-card">
+        {% endif %}
         <div class="metafieldtext">{{ product.metafields.custom.productcardtext2 }}</div>
       </div>
     </div>
