--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -70,6 +70,13 @@ Supported variables
       ;
       padding: 20px;
     }
+
+    @media screen and (min-width: 1000px) {
+
+      roduct-card.product-card.product-card--blends {
+        flex-basis: 20%;
+      }
+    }
   {% endstyle %}
 
   {%- if product.media.size > 0 -%}
