--- a/sections/flavoures-card.liquid
+++ b/sections/flavoures-card.liquid
@@ -59,7 +59,7 @@
   .product-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
   }
   product-card.product-card.product-card--blends.bg-custom.text-custom {
     width: 30%;
