--- a/sections/flavoures-card.liquid
+++ b/sections/flavoures-card.liquid
@@ -76,6 +76,10 @@
       flex-basis: 25%;
     }
   }
+
+  .product-card--blends .product-card__info {
+    padding-block-start: 0 !important;
+  }
 </style>
 
 <div {% render 'section-properties' %}>
