--- a/snippets/flavour-card.liquid
+++ b/snippets/flavour-card.liquid
@@ -316,6 +316,7 @@ Supported variables
   }
   .product_des {
     font-size: 12px;
+    height: 76.78px;
   }
   .product-card__info {
     text-align: center;
