--- a/snippets/flavour-card.liquid
+++ b/snippets/flavour-card.liquid
@@ -316,7 +316,7 @@ Supported variables
   }
   .product_des {
     font-size: 12px;
-    height: 76.78px;
+    height: 76.78px !important;
   }
   .product-card__info {
     text-align: center;
