--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -70,6 +70,10 @@ Supported variables
       ;
       padding: 20px;
     }
+    .product_des {
+      font-size: 12px;
+      height: 76.78px !important;
+    }
   {% endstyle %}
 
   {%- if product.media.size > 0 -%}
