--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -70,9 +70,12 @@ Supported variables
       ;
       padding: 20px;
     }
-    .product_des {
-      font-size: 12px;
-      height: 76.78px !important;
+
+    @media screen and (min-width: 700px) {
+      .product_des {
+        font-size: 12px;
+        height: 76.78px !important;
+      }
     }
   {% endstyle %}
 
